2021-12-17  Jay Berkenbilt  <ejb@ql.org>

	* Add Pl_Buffer::getMallocBuffer() to initialize a buffer with
	malloc in support of the C API

2021-12-16  Jay Berkenbilt  <ejb@ql.org>

	* Add several functions to the C API for working with pages. C
	wrappers around sevearl of the "Legacy" page operations from
	QPDFObjectHandle.hh have been added. See "PAGE FUNCTIONS" in
	qpdf-c.h for details. Fixes #594.

2021-12-12  Jay Berkenbilt  <ejb@ql.org>

	* Convert documentation from docbook to reStructuredText/Sphinx.

2021-12-10  Jay Berkenbilt  <ejb@ql.org>

	* Handle bitstream overflow errors more gracefully. Fixes #581.

	* C API: add qpdf_get_object_by_id, qpdf_make_indirect_object, and
	qpdf_replace_object, exposing the corresponding methods in QPDF
	and QPDFObjectHandle. Fixes #588.

	* Add missing QPDF_DLL to QPDFObjectHandle::addTokenFilter so that
	it is actually accessible as part of the public interface as
	intended. Fixes #580.

	* C API: Overhaul how errors are handle the C API's object handle
	interfaces. Clarify documentation regarding object accessors and
	how type errors and warnings are handled. Many cases that used to
	crash code that used the C API can now be trapped and will be
	written stderr if not trapped. The new method
	qpdf_register_oh_error_handler can be used to specifically handle
	errors that occur when accessing object handles. See qpdf-c.h for
	details.

	* C API: Add qpdf_oh_new_uninitialized to explicitly create
	uninitialized object handles.

	* Add new error code qpdf_e_object that is used for exceptions
	(including warnings) that are caused by using QPDFObjectHandle
	methods on object handles of the wrong type.

2021-12-02  Jay Berkenbilt  <ejb@ql.org>

	* C API: Add qpdf_oh_is_initialized.

	* C API: Add qpdf_get_last_string_length to return the length of
	the last string returned. This is necessary in order to fully
	retrieve values of strings that may contain embedded null characters.
