@@ -41,6 +41,34 @@ enum qpdf_error_code_e
     qpdf_e_object,              /* type/bounds errors accessing objects */
 };
 
+/* Object Types */
+
+/* PDF objects represented by QPDFObjectHandle or, in the C API, by
+ * qpdf_oh, have a unique type code that has one of the values in the
+ * list below. As new object types are added to qpdf, additional items
+ * may be added to the list, so code that switches on these values
+ * should take that into consideration.
+ */
+enum qpdf_object_type_e {
+    /* Object types internal to qpdf */
+    qpdf_ot_uninitialized,
+    qpdf_ot_reserved,
+    /* Object types that can occur in the main document */
+    qpdf_ot_null,
+    qpdf_ot_boolean,
+    qpdf_ot_integer,
+    qpdf_ot_real,
+    qpdf_ot_string,
+    qpdf_ot_name,
+    qpdf_ot_array,
+    qpdf_ot_dictionary,
+    qpdf_ot_stream,
+    /* Additional object types that can occur in content streams */
+    qpdf_ot_operator,
+    qpdf_ot_inlineimage,
+    /* NOTE: if adding to this list, update QPDFObject.hh */
+};
+
 /* Write Parameters. See QPDFWriter.hh for details. */
 
 enum qpdf_object_stream_e
